Updating gitmodules and adding box2d.

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "SDL_mixer"]
   path = SDL_mixer
   url = https://github.com/libsdl-org/SDL_mixer.git
+[submodule "box2d"]
+	path = box2d
+	url = ./box2d
