Getting alignment and spacing working correctly.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
         "activityBar.background": "#193402",
         "titleBar.activeBackground": "#234903",
         "titleBar.activeForeground": "#F3FEE9"
-    }
+    },
+    "java.configuration.updateBuildConfiguration": "disabled"
 }
